Spell work - thru Fate

--- a/Overview.html
+++ b/Overview.html
@@ -13,6 +13,7 @@
   <li><a href="Combat.html">Combat Mechanics</a></li>
   <li><a href="Skills.html">Skills & Stats</a></li>
   <li><a href="Spells.html">Spells</a></li>
+  <li><a href="Races.html">Races & Classes</a></li>
 </ul>
 </body>
 </html>
