--- a/Spells.html
+++ b/Spells.html
@@ -24,8 +24,8 @@
        creature dwellings & some objects thru FoW; Mas - Permanently on, undispellable, no SP cost (both); GM -
        Reveal full map upon entering area (RPG)/Cast 1/day to fully reveal large area of adventure map (TBS)</li>
    <li>Spark</li>
-   <li>Bas - Shoot single spark, 1d4*lvl dmg (RPG)/5d2*power dmg (TBS); Adv - 1d5*lvl (RPG)/10+5d2*pwr (TBS); Exp -
-       1d6*lvl (RPG)/20+5d2*pwr (TBS); Mas - 7+1d7*lvl (RPG)/(2-3)*pwr (TBS); GM - 5 sparks in a cone aoe (both)</li>
+   <li>Bas - Shoot single spark, 1d4*lvl dmg (RPG)/5d2*power dmg (TBS); Adv - 1d5*lvl (RPG)/5d3*pwr (TBS); Exp -
+       1d6*lvl (RPG)/5d4*pwr (TBS); Mas - 7+1d7*lvl (RPG)/10+5d6*pwr (TBS); GM - 5 sparks in a cone aoe (both)</li>
    <li>Disguise (choose stronger or weaker)</li>
    <li>All levels - Effect multiplies based on level & mastery. Can only be pierced by <strong>higher-level</strong>
        Wizard Eye (GM unpierceable) 1hr/lvl; GM - Can manually edit disguise numbers by typing in. Semi-perm.</li>
@@ -214,7 +214,7 @@
    <li>Adv - Cure Poison1 for any char/stack (both), <10min*lvl (RPG); Exp - Cure Poison2 (both); Mas - 1hr*lvl (RPG),
        cures Poison3 (both); GM - Affects whole party/army, gives poison immunity for 1hr*lvl (RPG) 1turn*pwr (TBS)</li>
    <li>Cure Disease</li>
-   <li>Adv - Cures Disease1 on single unit (both); Exp - cures Disease2; Mas - cures Disease3; GM - cures all
+   <li>Adv - Cures Disease1 on single unit (both); Exp - cures Disease2; Mas - cures Disease3, 1hr*lvl; GM - cures all
        party/army, prevents for 1hr*lvl/1turn*pwr</li>
    <li>Poison Touch (new, replaces Hammerhands)</li>
    <li>Adv - +5 body dmg/phys hit (enchants a single weapon, 10min*lvl), 10% Poison1 chance (RPG)/+10% dmg & 20%
@@ -242,39 +242,55 @@
 <ul>
    <li><strong>Basic Level</strong></li>
    <li><em>Free:</em> Mind Blast</li>
-   <li>Bas - ; Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Bas - Shoot rotating skull, 1d4*lvl dmg (RPG)/5d2*power dmg (TBS); Adv - 1d5*lvl (RPG)/5d3*pwr (TBS); Exp -
+       1d6*lvl (RPG)/5d4*pwr (TBS); Mas - 7+1d7*lvl (RPG)/10+5d6*pwr (TBS); GM - 10+1d10*lvl (RPG)/20+5d8*lvl (TBS)</li>
    <li>Remove Fear</li>
-   <li>Bas - ; Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Bas - Cures Fear1 from single target (both), 10*lvl min (RPG); Adv - Cures Fear2; Exp - Cures Fear3; Mas -
+       1hr*lvl (RPG)/0 cost (TBS), affects all (both); GM - 0 cost/near instant CD (RPG)/First cast does not count as
+       turn's spell, +second with GM Int (TBS)</li>
    <li>Telepathy</li>
-   <li>Bas - ; Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Spell version of ID Monster, all levels match precisely. 10min*lvl Bas-Exp, 1hr*lvl Mas, Semi-perm GM (RPG)
+       /Not sure what to do yet for TBS.</li>
    <li>Mind Resistance</li>
    <li>Bas - 10+1%/lvl to res. 1hr/lvl; Adv - 15+2%/lvl to res; Exp - 20+3%/lvl to res; Mas - 40+4%; GM - 100% floor.
        Skill lasts until rest/area change/etc.</li>
    <li><strong>Advanced Level</strong></li>
    <li><em>Free:</em> Fear</li>
-   <li>Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Adv - Inflicts Fear1, 5min*lvl (RPG)/1turn*pwr (TBS); Exp - Fear2; Mas - Fear3; GM - Small aoe (RPG)/1hex aoe
+       (TBS)</li>
    <li>Pacify (formerly "Charm")</li>
-   <li>Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Adv - Inflicts Pacify1, 5min*lvl (RPG)/1turn*pwr (TBS); Exp - Pacify2; Mas - Pacify3; GM - Small aoe (RPG)/1hex
+       aoe (TBS) </li>
    <li>Restore Sanity (formerly "Cure Insanity")</li>
-   <li>Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Adv - Cures Sanity1 (both), 10min*lvl (RPG); Exp - Cures Sanity2; Mas - Cures Sanity3, 1hr*lvl (RPG); GM -
+       Cures all party/army, chara - 1*sp</li>
    <li><strong>Expert Level</strong></li>
    <li><em>Free:</em> Telekinesis</li>
-   <li>Exp - ; Mas - ; GM - </li>
+   <li>Exp - Interact with map objects from any distance. High cost/long cd (RPG)/Pickup map objects (resources,
+       artifacts, etc.) from a 3hex distance. High cost, 1*day (TBS); Mas - Med cost (both) med cd (RPG)/2*day (TBS);
+       GM - 0 cost (both) low cd (RPG)/3*day (TBS)</li>
    <li>Psychic Shock</li>
-   <li>Exp - ; Mas - ; GM - </li>
+   <li>Exp - 10+(5-1)5*lvl (RPG)/20+(10-20)*lvl (TBS) 20% chance Sanity1 (both); Mas - 12+(8-17)*lvl
+       (RPG)/20+(12-25)*lvl (TBS) 40/20% Sanity1/2 chance (both); GM - 15+(10-20)*lvl (RPG)/30+(15-25)*lvl (TBS)
+       50/30/20% Sanity1/2/3 chance (both)</li>
    <li>Berserk</li>
-   <li>Exp - ; Mas - ; GM - </li>
+   <li>Exp - Lvl1-5 creature, atks nearest creature (prioritizes caster's enemy in tie) (both), 5min*lvl (RPG)/1turn
+       (TBS); Mas - Lvl1-7 (both); GM - Small aoe (RPG)/1hex aoe (TBS)</li>
    <li><strong>Master Level</strong></li>
-   <li><em>Free:</em> Dominate (formerly "Enslave")</li>
-   <li>Mas - ; GM - </li>
+   <li><em>Free:</em> Hypnotize (from H3C air but takes place of MMC "Enslave")</li>
+   <li>Mas - Can command enemy unit, lvl1-6 (both) 10min*lvl (RPG) 1turn (TBS); GM - any level (both) 2turn (TBS)</li>
 </ul>
 <h3>Spirit Magic</h3>
 <ul>
    <li><strong>Basic Level</strong></li>
    <li><em>Free:</em> Spirit Bolt</li>
-   <li>Bas - ; Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Bas - 2+(2-3)*lvl (RPG)/5+5d2*pwr (TBS); 2+(3-4)*lvl (RPG)/15+5d2*pwr (TBS); Exp - 5+(4-6)*lvl (RPG)/20+6d2*pwr
+       (TBS); Mas - 10+(5-7)*lvl (RPG)/20+5d3*pwr (TBS); GM - 20+(7-12)*lvl (RPG)/30+5d5*lvl</li>
    <li>Fate</li>
-   <li>Bas - ; Adv - ;Exp - ; Mas - ; GM - </li>
+   <li>Bas - 10+2%*level chance for better outcomes when cast on an ally, for worse outcomes when cast on an enemy
+       (both); Adv - 15+3%*lvl; Exp - 20+5%*lvl; Mas - Affects either all allies (both) or vision cone aoe enemies
+       (RPG)/all enemies (TBS); GM - 25+5%. Affects all allies & enemies. All levels: 10min*lvl (RPG)/1turn per
+       mastery (TBS)</li>
    <li>Detect Life</li>
    <li>Bas - ; Adv - ;Exp - ; Mas - ; GM - </li>
    <li>Spirit Resistance</li>
