Spell work - thru Life Adv. Commensurate changes to a few other pages.

--- a/Castles_and_Creatures.html
+++ b/Castles_and_Creatures.html
@@ -189,7 +189,7 @@
 	<li>Sharpshooter - L4</li>
 	<li>Troll - L5</li>
 	<li>Gold Golem - L5 (Animated, Non-living)</li>
-	<li>Diamond Golem - L6 (Animated, Non-living)</li>
+	<li>Crystal Golem - L6 (formerly Diamond golem)</li>
 	<li>Enchanter - L6</li>
 	<li>Faerie Dragon - L8</li>
 	<li>Rust Dragon - L9</li>
