--- a/Overview.html
+++ b/Overview.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <h1>Heroes 1-3 + Might & Magic VI - VIII Revamp</h1>
-<p>This project is currently (Feb 2025) a personal collection of notes based on my 25+ years of experience with the Heroes of Might & Magic and Might & Magic series, essentially how I'd revamp the games if given the chance to make the games more cohesive, fun, replayable & inclusive.</p>
+<p>This project is currently (Feb 2025) a personal collection of notes based on my 25+ years of experience with the
+   Heroes of Might & Magic and Might & Magic series, essentially how I'd revamp the games if given the chance to make
+   the games more cohesive, fun, replayable & inclusive.</p>
 <h2>Links</h2>
 <ul>
   <li><a href="Castles_and_Creatures.html">Castles & Creatures</a></li>
