--- a/Races.html
+++ b/Races.html
@@ -74,6 +74,7 @@
 </ul>
 <h3>Non-Living / Summoned / Enchanted</h3>
 <ul>
+  <li>Dendroid</li>
   <li>Gargoyle</li>
   <li>Golem</li>
   <li>Wisp</li>
