Spells finished initially.

--- a/Castles_and_Creatures.html
+++ b/Castles_and_Creatures.html
@@ -160,8 +160,8 @@
 <h4>Creatures</h4>
 <ol>
 	<li>Skeleton Infantry</li>
-	<li>Zombie</li>
 	<li>Skeleton Archers</li>
+	<li>Zombie</li>
 	<li>Ghosts (wights/wraiths but renamed for consistency)</li>
 	<li>Vampires</li>
 	<li>Liches</li>
@@ -170,13 +170,14 @@
 <h3>Dungeon</h3>
 <h4>General Info</h4>
 <h4>Creatures</h4>
+<p>Still working on reordering these, but I thiiink this is it</p>
 <ol>
 	<li>Troglodytes</li>
 	<li>Harpies</li>
 	<li>Beholders</li>
+	<li>Manticores</li>
 	<li>Medusas</li>
 	<li>Minotaurs</li>
-	<li>Manticores</li>
 	<li>Dragons (Red/Black)</li>
 </ol>
 <h2>Neutral Creatures</h2>
